contrast fixed

--- a/style.css
+++ b/style.css
@@ -210,16 +210,19 @@ button:hover {
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 0.8);
+    font-style: italic;
     opacity: 1; /* Firefox */
   }
   
   :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 0.8);
+    font-style: italic;
   }
   
   ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 0.8);
+    font-style: italic;
   }
 
 
